# ice_tracking

./: CMakeLists.txt  README.md  package.xml
config/: cloud.yaml  general.yaml  icetrack_mapping.yaml  info.yaml  mapping.yaml  navigation.yaml  rviz.rviz  system.yaml
include/icetrack/: CloudManager.h  IceTrack.h  SensorSystem.h  StampedRingBuffer.h  StampedRingBuffer.tpp  SurfaceEstimator.h  altitudeFactor.h  cloud_manager.h  common.h  container.h  diagnostics.h  file_system.h  gnss.h  icenav.h  icetrack.h  imu.h  lidar.h  message_sequencer.h  navigation.h
include/icetrack/factors/: AltitudeFactor.h  AngularConstraintFactor.h  LeveredAltitudeFactor.h
include/icetrack/mapping/: container.h  icemap.h  processing.h  utils.h
include/icetrack/navigation/: GnssCorrection.h  ImuIntegration.h  InertialPoseEstimator.h  PoseEstimator.h  Projection.h  ShipPoseEstimator.h  SurfaceEstimation.h  altitudeFactor.h  common.h  gnss.h  icenav.h  imu.h  lidar.h
include/icetrack/system/: Gnss.h  Imu.h  Lidar.h  SensorSystem.h  Ship.h
include/icetrack/utils/: CallbackSequencer.h  StampedRingBuffer.h  conversions.h  file.h  file_system.h  ros_params.h  utils.h
launch/: analysis.launch  icetrack.launch  icetrack_rosbag.launch  profile.launch  rosbag.launch  rosbag_fixed_rate.launch  rosbag_mapping.launch
msg/: ShipNavigation.msg
scripts/: diag_analysis  geojson.py  geojson_stats.py  hist_analaysis.py  nav_analysis  plot_diag.py  plot_nav.py  plot_stats.py  profile  proj_test_bin.py  projection_test.py  read_dataset.py  stats_analysis
src/: icetrack.cpp  icetrack_node.cpp  main_rosbag.cpp  mapping_node.cpp  navigation_node.cpp  rosbag.cpp  rosbag_fixed_rate_node.cpp  rosbag_mapping_node.cpp  rosbag_node.cpp  rosbag_parser.cpp  rostopic_node.cpp
src/fixed_lag_mapping/: FixedLagMapper.cpp  FixedLagMapper.h
src/fixed_lag_mapping/backend/: GnssCorrection.cpp  ImuIntegration.cpp  ImuIntegration.h  PoseGraph.cpp  PoseGraph.h  PoseGraphOutput.cpp  PoseGraphOutput.h  SurfaceCorrection.cpp  SurfaceCorrection.h  navigation.h
src/fixed_lag_mapping/frontend/: CloudManager.cpp  CloudManager.h  CloudPublisher.cpp  CloudPublisher.h  FrameBuffer.cpp  LidarFrame.cpp  OdometryEstimator.h  PointBuffer.cpp  PointBuffer.h  point_types.h
src/fixed_lag_mapping/utils/: Diagnostics.cpp  StampedRingBuffer.tpp  file_system.h  pointcloud.cpp
src/icetrack/: CloudManager.cpp  Diagnostics.cpp  FixedLagMapper.cpp  FixedLagMapper.h  IceTrack.cpp  SurfaceEstimator.cpp  cloud_manager.cpp  container.cpp  diagnostics.cpp  gnss.cpp  icetrack.cpp  imu.cpp  lidar.cpp  navigation.cpp
src/icetrack/backend/: GnssCorrection.cpp  GnssCorrection.h  ImuIntegration.cpp  ImuIntegration.h  PoseGraph.cpp  PoseGraph.h  PoseGraphOutput.cpp  navigation.h
src/icetrack/frontend/: CloudFrame.cpp  CloudFrame.h  CloudManager.cpp  CloudManager.h  CloudProcessor.cpp  CloudProcessor.h  CloudPublisher.cpp  CloudPublisher.h  CloudRaster.cpp  CloudRaster.h  ClusterRaster.cpp  ClusterRaster.h  DBScanner.h  Floe.cpp  Floe.h  FloeManager.cpp  FloeManager.h  FrameBuffer.cpp  FrameBuffer.h  LidarFrame.cpp  LidarFrame.h  LidarFrontEnd.cpp  LidarFrontEnd.h  LidarOdometry.cpp  LidarOdometry.h  Map.cpp  Map.h  MapBuilder.cpp  MapBuilder.h  OdometryEstimator.cpp  OdometryEstimator.h  PointBuffer.cpp  PointBuffer.h  Raster.cpp  Raster.h  RasterizedCluster.cpp  RasterizedCluster.h  SurfaceEstimator.cpp  SurfaceEstimator.h
src/icetrack/mapping/: CloudAnalyzer.cpp  CloudGenerator.cpp  CloudGenerator.h  CloudManager.cpp  CloudProcessor.cpp  CloudRaster.cpp  CloudRaster.h  Floe.cpp  FloeManager.cpp  Raster.cpp  Raster.h  RasterizedCluster.h  pointcloud.h
src/icetrack/navigation/: CloudManager.cpp  CloudManager.h  GnssCorrection.cpp  ImuIntegration.cpp  InertialPoseEstimator.cpp  LidarFrontEnd.cpp  LidarOdometry.cpp  PointBuffer.cpp  PointBuffer.h  (+8 more)
src/mapping/: CloudAnalyzer.h  CloudManager.cpp  CloudManager.h  CloudProcessor.cpp  CloudProcessor.h  container.cpp  icemap.cpp  processing.cpp  utils.cpp
src/navigation/: CloudManager.cpp  CloudManager.h  FixedLagMapper.cpp  FixedLagMapper.h  FixedLagMapperInterface.cpp  FixedLagMapperInterface.h  FrameBuffer.cpp  FrameBuffer.h  GnssCorrection.cpp  GnssCorrection.h  ImuIntegration.cpp  ImuIntegration.h  LidarBuffer.cpp  LidarBuffer.h  LidarFrameBuffer.cpp  LidarFrameBuffer.h  LidarFrontEnd.cpp  LidarFrontEnd.h  LidarOdometry.cpp  LidarOdometry.h  LidarPointBuffer.cpp  LidarPointBuffer.h  PointBuffer.h  PoseEstimator.cpp  PoseEstimator.h  PoseGraph.cpp  PoseGraph.h  PoseGraphManager.cpp  PoseGraphManager.h  SurfaceEstimation.cpp  SurfaceEstimation.h  SurfaceEstimator.cpp  SurfaceEstimator.h  gnss.cpp  icenav.cpp  imu.cpp  lidar.cpp  main.cpp  navigation.h
src/utils/: StampedRingBuffer.h  StampedRingBuffer.tpp  calibration.h  pointcloud.h
(+36 files in other folders)
